# UnhideNPCs

./: .gitignore  CMakeLists.txt  CONFIGURATION.md  README.md  version.rc.in
.github/workflows/: build-and-release.yml
patches/: imgui-xinput-lowercase.patch
src/: MumbleLink.hpp  arcdps.hpp  dllmain.cpp  hotkey.cpp  hotkey.hpp  injector.cpp  midimap.hpp  nexus.cpp  pch.hpp  settings.hpp  ui.cpp  ui.hpp  unpc.cpp  unpc.hpp  version.hpp.in
src/fw/: Config.cpp  Config.hpp  config.cpp  config.hpp  logger.cpp  logger.hpp  proxy.cpp  proxy.hpp  settings.cpp  settings.hpp  util.cpp  util.hpp
src/fw/memory/: handle.cpp  handle.hpp  hook.cpp  hook.hpp  memory.cpp  memory.hpp  module.cpp  module.hpp  pattern.cpp  pattern.hpp  pointer_validator.cpp  pointer_validator.hpp  protection.cpp  protection.hpp  range.cpp  range.hpp  scanner.cpp  scanner.hpp
src/fw/memory/hooks/: d3d11.cpp  d3d11.hpp  wndproc.cpp  wndproc.hpp
src/integration/: arcdps.cpp  arcdps.hpp  nexus.cpp  nexus.hpp
src/proxy/: d3d9.def  d3d9.hpp  dxgi.def  dxgi.hpp  midimap.def  midimap.hpp
